<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nova_background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAliases"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/addBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aliases_empty"
        android:textColor="@color/nova_text_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/addBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/nova_surface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/inputPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aliases_package_hint"
            android:inputType="text"
            android:textColor="@color/nova_text_primary"
            android:textColorHint="@color/nova_text_secondary" />

        <EditText
            android:id="@+id/inputAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/aliases_alias_hint"
            android:inputType="text"
            android:textColor="@color/nova_text_primary"
            android:textColorHint="@color/nova_text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aliases_add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
